--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,7 @@ p{
     text-decoration: underline;
 }
 body{
-    font-family: Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
  h1{
     color: #3d3d3d;
@@ -16,7 +16,7 @@ body{
  }
  figure{
     text-align: center;
-    background-color: 
-    color:lightgray
+    background-color: whitesmoke;
+    color:lightgray;
 
  }
