--- a/estilos.css
+++ b/estilos.css
@@ -1,13 +1,17 @@
 p{
-    text-align: center;
-    text-decoration: underline;
+    text-align: justify;
+    text-decoration:dotted;
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-}
+    max-width: 940px;
+    margin: 0 auto;
+    }
+    
  h1{
     color: #3d3d3d;
     background-color: #e1edf2;
+    padding: 10px;
     
  }
  h2{
@@ -18,5 +22,8 @@ body{
     text-align: center;
     background-color: whitesmoke;
     color:lightgray;
-
- }
+    padding: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 10px;
+}
