--- a/estilos.css
+++ b/estilos.css
@@ -17,6 +17,11 @@ body{
  h2{
     border-bottom: 2px solid #000;
     
+h3{
+   border-bottom: 2px solid #000;
+
+}
+    
  }
  figure{
     text-align: center;
