--- a/estilos.css
+++ b/estilos.css
@@ -1,33 +1,47 @@
-p{
-    text-align: justify;
-    text-decoration:dotted;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 940px;
-    margin: 0 auto;
-    }
-    
- h1{
-    color: #3d3d3d;
-    background-color: #e1edf2;
+body {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+ 
+    font-family: "Helvetica", "Lucida Grande", sans-serif;
+    color: #3D3D3D;
+  }
+ 
+  h1 {
     padding: 10px;
- }
-
- h2{
-   border-bottom: 2px solid #000;
- }
-
- h3{
-   
- }
-
- figure{
-    text-align: center;
-    background-color: whitesmoke;
-    color:lightgray;
+ 
+    background-color: #E1EDF2;
+  }
+ 
+  h2 {
+    border-bottom: 2px solid black;
+  }
+ 
+  figure {
+    margin: 30px;
     padding: 15px;
-    margin-left: 30px;
-    margin-right: 30px;
-    padding-top: 10px;
-}
+ 
+    text-align: center;
+ 
+    background-color: whitesmoke;
+    border: 1px solid lightgrey;
+  }
+ 
+  figcaption {
+    margin-top: 10px;
+  }
+ 
+ .matriz-musicdot {
+   width: 550px;
+   margin-left: auto;
+   margin-right: auto;
+ }
+ 
+ .familia-tupfeln {
+   width: 275px;
+   float: right;
+ }
+ 
+ figure img {
+   width: 100%;
+ }
