--- a/estilos.css
+++ b/estilos.css
@@ -7,13 +7,15 @@ body {
     color: #3D3D3D;
   }
  
-  h1 {
+ .titulo {
     padding: 10px;
+ 
+   font-size: 32px;
  
     background-color: #E1EDF2;
   }
  
-  h2 {
+ .subtitulo {
     border-bottom: 2px solid black;
   }
  
@@ -31,17 +33,17 @@ body {
     margin-top: 10px;
   }
  
- .matriz-musicdot {
-   width: 550px;
-   margin-left: auto;
-   margin-right: auto;
- }
+  .matriz-musicdot {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+  }
  
- .familia-tupfeln {
-   width: 275px;
-   float: right;
- }
+  .familia-tupfeln {
+    width: 275px;
+    float: right;
+  }
  
- figure img {
-   width: 100%;
- }
+  figure img {
+    width: 100%;
+  }
